--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -53,7 +53,7 @@
                                             <td><a class="btn-link" href="#">{{sub.id}}</a></td>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
                                             <td>{{sub.Category.Title}}</td>
-                                            <td>{{sub.From}}</td>
+                                            <td>{{sub.From|date:'d/m/Y'}}</td>
                                             {% if sub.Category.Title|upper == "AMAZI" %}
                                                 <td>{{sub.System.total|intcomma}} Rwf</td>
                                             {% else %}
