--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -44,8 +44,22 @@
 
                                             <div class="col-sm-12">
                                                             <div class="form-group">
+                                                            <label class="control-label">Total Amount</label>
+                                                            <input type="text"  class="form-control" name="total" required>   
+                                                        </div>
+                                                </div>
+
+                                            <div class="col-sm-12">
+                                                            <div class="form-group">
                                                             <label class="control-label">Down payment</label>
-                                                            <input type="text" value='0' class="form-control" name="downpayment" >   
+                                                            <input type="text" value='0' class="form-control" name="downpayment" required>   
+                                                        </div>
+                                                </div>
+
+                                                <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Installment Period</label>
+                                                            <input type="number"  class="form-control" name="period" required>   
                                                         </div>
                                                 </div>
                                            
