--- a/users/templates/approveothersystem.html
+++ b/users/templates/approveothersystem.html
@@ -35,6 +35,13 @@
                                                             <input type="number" value='0' class="form-control" name="downpayment" >   
                                                         </div>
                                                 </div>
+
+                                                <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Installment Period</label>
+                                                            <input type="number" class="form-control" name="period" required>   
+                                                        </div>
+                                                </div>
                                            
                                             
                                             
