--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -44,8 +44,8 @@
 
                                             <div class="col-sm-12">
                                                             <div class="form-group">
-                                                            <label class="control-label">Total Amount</label>
-                                                            <input type="text"  class="form-control" name="total" required>   
+                                                            <label class="control-label">Additional Amount</label>
+                                                            <input type="text" value='0' class="form-control" name="total" required>   
                                                         </div>
                                                 </div>
 
