--- a/users/templates/approveothersystem.html
+++ b/users/templates/approveothersystem.html
@@ -20,7 +20,7 @@
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Add tools</label>
-                                                            <input type="text" class="form-control" name="tools" >   
+                                                             <textarea class="form-control" name="tools"></textarea> 
                                                         </div>
                                                 </div>
                                                 <div class="col-sm-12">
