--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -17,7 +17,14 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <a href="{% url 'new_subscriptions'%}" id="demo-btn-addrow" class="btn btn-success">New subscriptions</a>
+                                        <a href="{% url 'new_subscriptions'%}" id="demo-btn-addrow" class="btn btn-success">New subscriptions 
+                                         
+                                         {% if numofsubs > 0 %}
+                                         <b style="background-color:red;font-size:14px;padding:5px;border-radius:100px;color:#fff;text-align: center;"> {{numofsubs}} </b> 
+                                         {% else %}
+                                         <b></b>
+                                         {% endif %}
+                                         </a>
                                         {% comment %} <a href="{% url 'add_subscription'%}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a> {% endcomment %}
 
                                         <div class="btn-group">
