--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -25,7 +25,7 @@
                                          <b></b>
                                          {% endif %}
                                          </a>
-                                        {% comment %} <a href="{% url 'add_subscription'%}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a> {% endcomment %}
+                                        <a href="{% url 'add_subscription'%}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
 
                                         <div class="btn-group">
                                             <div class="form-group">
