--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -25,6 +25,12 @@
                                                     </select>  
                                                 </div>
                                             </div>
+                                              <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Discount on system 1</label>
+                                                            <input type="text" value='0' class="form-control" name="discount" required>   
+                                                        </div>
+                                                </div>
                                             <div class="col-sm-12">
                                                     <div class="form-group">
                                                     <label class="control-label">Second System (if any)</label>
@@ -33,6 +39,12 @@
                                                     </select>  
                                                 </div>
                                             </div>
+                                            <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Discount on system 2</label>
+                                                            <input type="text" value='0' class="form-control" name="discount1" required>   
+                                                        </div>
+                                                </div>
                                       
 
                                             <div class="col-sm-12">
