--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -72,8 +72,8 @@
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Meter Number</label>
-                                                    <select class="form-control" name="Meternumber"required>
-                                                       <option value="Select meter number">Select meter number</option> 
+                                                    <select class="form-control" name="Meternumber">
+                                                       <option value="">Select meter number</option> 
                                                     {% for meter in Meter %}
 
                                                        <option value="{{meter.id}}">{{meter.Meternumber}}</option> 
