--- a/users/templates/create_system.html
+++ b/users/templates/create_system.html
@@ -62,7 +62,7 @@
                                               {% for tool in tools%}
                                             <div class="col-sm-2">
                                                 <div class="checkbox">
-                                                    <input id="demo-remember-me" value={{tool.id}} class="magic-checkbox" type="checkbox" required>
+                                                    <input id="demo-remember-me" value={{tool.id}} class="magic-checkbox" type="checkbox">
                                                     <label for="demo-remember-me">{{tool.Title}}</label>
                                                 </div>
                                             </div>
